opam-version: "2.0"
compiler: [
  "base-bigarray.base"
  "base-threads.base"
  "base-unix.base"
  "ocaml.4.07.1"
  "ocaml-base-compiler.4.07.1"
  "ocaml-config.1"
]
roots: [
  "atdgen.2.0.0"
  "base.v0.12.2"
  "batteries.2.9.0"
  "caqti.1.1.0"
  "caqti-driver-mariadb.1.1.0"
  "caqti-lwt.1.0.0"
  "cohttp-lwt.2.0.0"
  "cohttp-lwt-unix.2.0.0"
  "dune.2.6.2"
  "lwt_ppx.1.2.2"
  "ocaml-base-compiler.4.07.1"
  "ppx_inline_test.v0.12.0"
  "ppx_let.v0.12.0"
  "sha.1.12"
]
installed: [
  "angstrom.0.14.1"
  "astring.0.8.5"
  "atd.2.2.1"
  "atdgen.2.0.0"
  "atdgen-runtime.2.0.0"
  "base.v0.12.2"
  "base-bigarray.base"
  "base-bytes.base"
  "base-threads.base"
  "base-unix.base"
  "base64.3.2.0"
  "batteries.2.9.0"
  "bigarray-compat.1.1.0"
  "bigstringaf.0.6.1"
  "biniou.1.2.1"
  "caqti.1.1.0"
  "caqti-driver-mariadb.1.1.0"
  "caqti-lwt.1.0.0"
  "cmdliner.1.0.4"
  "cohttp.2.4.0"
  "cohttp-lwt.2.0.0"
  "cohttp-lwt-unix.2.0.0"
  "conduit.1.5.0"
  "conduit-lwt.1.5.0"
  "conduit-lwt-unix.1.5.0"
  "conf-mariadb.2"
  "conf-pkg-config.2"
  "cppo.1.6.8"
  "ctypes.0.20.0"
  "domain-name.0.4.0"
  "dune.2.6.2"
  "dune-configurator.2.6.2"
  "dune-private-libs.2.6.2"
  "easy-format.1.3.2"
  "fieldslib.v0.12.0"
  "fmt.0.8.9"
  "integers.0.5.1"
  "ipaddr.5.2.0"
  "ipaddr-sexp.5.2.0"
  "jbuilder.1.0+beta20.2"
  "jsonm.1.0.1"
  "logs.0.7.0"
  "lwt.4.2.1"
  "lwt_ppx.1.2.2"
  "macaddr.5.2.0"
  "magic-mime.1.2.0"
  "mariadb.1.1.4"
  "menhir.20190924"
  "mmap.1.1.0"
  "num.1.4"
  "ocaml.4.07.1"
  "ocaml-base-compiler.4.07.1"
  "ocaml-compiler-libs.v0.12.3"
  "ocaml-config.1"
  "ocaml-migrate-parsetree.1.8.0"
  "ocamlbuild.0.14.0"
  "ocamlfind.1.9.1"
  "ocplib-endian.1.2"
  "parsexp.v0.12.0"
  "ppx_derivers.1.2.1"
  "ppx_fields_conv.v0.12.0"
  "ppx_inline_test.v0.12.0"
  "ppx_let.v0.12.0"
  "ppx_sexp_conv.v0.12.0"
  "ppx_tools_versioned.5.4.0"
  "ppxlib.0.8.1"
  "ptime.0.8.6"
  "re.1.9.0"
  "result.1.5"
  "seq.base"
  "sexplib.v0.12.0"
  "sexplib0.v0.12.0"
  "sha.1.12"
  "stdio.v0.12.0"
  "stdlib-shims.0.3.0"
  "stringext.1.6.0"
  "topkg.1.0.5"
  "uchar.0.0.2"
  "uri.3.1.0"
  "uri-sexp.3.1.0"
  "uutf.1.0.2"
  "yojson.1.7.0"
]
pinned: [
  "atdgen.2.0.0"
  "base.v0.12.2"
  "batteries.2.9.0"
  "caqti.1.1.0"
  "caqti-driver-mariadb.1.1.0"
  "caqti-lwt.1.0.0"
  "cohttp-lwt.2.0.0"
  "cohttp-lwt-unix.2.0.0"
  "dune.2.6.2"
  "lwt.4.2.1"
  "lwt_ppx.1.2.2"
  "ppx_fields_conv.v0.12.0"
  "ppx_inline_test.v0.12.0"
  "ppx_let.v0.12.0"
  "ppx_sexp_conv.v0.12.0"
  "sha.1.12"
]
